# FFMPEGBasic

./: README.md  example.avi
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wingbu/ffmpegbasic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  native-deal-pcm.cpp  native-lib.cpp  native-mix-player.cpp  native-player.cpp  native-sl-player.cpp  native-trans-video.cpp
app/src/main/java/com/example/wingbu/ffmpegbasic/: IndexActivity.java  MainActivity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/file/: FileIndexActivity.java  FileIndexAdapter.java  FileResultEntity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/opensl/: OpenSLActivity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/parse/: H264ParseActivity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/play/: MixPlayActivity.java  RawPlayerActivity.java  VideoPlayActivity.java  VideoViewActivity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/play/mix/: Play.java  VideoView.java
app/src/main/java/com/example/wingbu/ffmpegbasic/trans/: TransPCMActivity.java  TransVideoActivity.java
app/src/main/java/com/example/wingbu/ffmpegbasic/utils/: DateUtils.java  FilePathUtils.java  FileUtils.java  TextUtils.java  ToastUtils.java
app/src/main/res/layout/: activity_file_index.xml  activity_h264_parse.xml  activity_index.xml  activity_main.xml  activity_mix_play.xml  activity_open_sl.xml  activity_raw_player.xml  activity_trans_pcm.xml  activity_trans_video.xml  activity_video_play.xml  activity_video_view.xml  item_file_index.xml
app/src/main/res/raw/: new_order_5_times_pcm.pcm
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wingbu/ffmpegbasic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
